# five-axis-control-panel

./: .gitignore  CMakeLists.txt  five-axis-control-panel.pro  image_settings.cpp  main.cpp  main_control_panel.cpp  main_control_panel.h  serial_adapter.cpp  toggle_switch.cpp  toggle_switch.h  toggle_switch_style.h  video_adapter.cpp  video_adapter.h  video_adapter.ui  video_settings.cpp  video_settings.ui
include/: main_control_panel.h  serial_adapter.h  video_adapter.h
src/: main.cpp  main_control_panel.cpp  serial_adapter.cpp  toggle_switch.cpp  video_adapter.cpp
ui_description/: copy-main_control_panel.ui  copy-video_adapter.ui  copy2-main_control_panel.ui  main_control_panel.ui  video_adapter.ui
